CompilationAndLanguageTheory-exam/Exam/2022/Qst1/parseur.output
Grammaire

    0 $accept: prog $end

    1 prog: STATE NUMBER EOL marquage_list TRANSITION EOL transaction_list

    2 marquage_list: NUMBER COLON NUMBER EOL
    3              | marquage_list NUMBER COLON NUMBER EOL

    4 transaction_list: NUMBER COLON LPAREN number_list RPAREN ARROW LPAREN number_list RPAREN
    5                 | transaction_list NUMBER EOL COLON LPAREN number_list RPAREN ARROW LPAREN number_list RPAREN

    6 number_list: NUMBER
    7            | number_list COMMA NUMBER


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
NUMBER (258) 1 2 3 4 5 6 7
COMMA (259) 7
STATE (260) 1
TRANSITION (261) 1
COLON (262) 2 3 4 5
ARROW (263) 4 5
LPAREN (264) 4 5
RPAREN (265) 4 5
EOL (266) 1 2 3 5


Non-terminaux, suivis des règles où ils apparaissent

$accept (12)
    à gauche: 0
prog (13)
    à gauche: 1, à droite: 0
marquage_list (14)
    à gauche: 2 3, à droite: 1 3
transaction_list (15)
    à gauche: 4 5, à droite: 1 5
number_list (16)
    à gauche: 6 7, à droite: 4 5 7


état 0

    0 $accept: . prog $end

    STATE  décalage et aller à l'état 1

    prog  aller à l'état 2


état 1

    1 prog: STATE . NUMBER EOL marquage_list TRANSITION EOL transaction_list

    NUMBER  décalage et aller à l'état 3


état 2

    0 $accept: prog . $end

    $end  décalage et aller à l'état 4


état 3

    1 prog: STATE NUMBER . EOL marquage_list TRANSITION EOL transaction_list

    EOL  décalage et aller à l'état 5


état 4

    0 $accept: prog $end .

    $défaut  accepter


état 5

    1 prog: STATE NUMBER EOL . marquage_list TRANSITION EOL transaction_list

    NUMBER  décalage et aller à l'état 6

    marquage_list  aller à l'état 7


état 6

    2 marquage_list: NUMBER . COLON NUMBER EOL

    COLON  décalage et aller à l'état 8


état 7

    1 prog: STATE NUMBER EOL marquage_list . TRANSITION EOL transaction_list
    3 marquage_list: marquage_list . NUMBER COLON NUMBER EOL

    NUMBER      décalage et aller à l'état 9
    TRANSITION  décalage et aller à l'état 10


état 8

    2 marquage_list: NUMBER COLON . NUMBER EOL

    NUMBER  décalage et aller à l'état 11


état 9

    3 marquage_list: marquage_list NUMBER . COLON NUMBER EOL

    COLON  décalage et aller à l'état 12


état 10

    1 prog: STATE NUMBER EOL marquage_list TRANSITION . EOL transaction_list

    EOL  décalage et aller à l'état 13


état 11

    2 marquage_list: NUMBER COLON NUMBER . EOL

    EOL  décalage et aller à l'état 14


état 12

    3 marquage_list: marquage_list NUMBER COLON . NUMBER EOL

    NUMBER  décalage et aller à l'état 15


état 13

    1 prog: STATE NUMBER EOL marquage_list TRANSITION EOL . transaction_list

    NUMBER  décalage et aller à l'état 16

    transaction_list  aller à l'état 17


état 14

    2 marquage_list: NUMBER COLON NUMBER EOL .

    $défaut  réduction par utilisation de la règle 2 (marquage_list)


état 15

    3 marquage_list: marquage_list NUMBER COLON NUMBER . EOL

    EOL  décalage et aller à l'état 18


état 16

    4 transaction_list: NUMBER . COLON LPAREN number_list RPAREN ARROW LPAREN number_list RPAREN

    COLON  décalage et aller à l'état 19


état 17

    1 prog: STATE NUMBER EOL marquage_list TRANSITION EOL transaction_list .
    5 transaction_list: transaction_list . NUMBER EOL COLON LPAREN number_list RPAREN ARROW LPAREN number_list RPAREN

    NUMBER  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 1 (prog)


état 18

    3 marquage_list: marquage_list NUMBER COLON NUMBER EOL .

    $défaut  réduction par utilisation de la règle 3 (marquage_list)


état 19

    4 transaction_list: NUMBER COLON . LPAREN number_list RPAREN ARROW LPAREN number_list RPAREN

    LPAREN  décalage et aller à l'état 21


état 20

    5 transaction_list: transaction_list NUMBER . EOL COLON LPAREN number_list RPAREN ARROW LPAREN number_list RPAREN

    EOL  décalage et aller à l'état 22


état 21

    4 transaction_list: NUMBER COLON LPAREN . number_list RPAREN ARROW LPAREN number_list RPAREN

    NUMBER  décalage et aller à l'état 23

    number_list  aller à l'état 24


état 22

    5 transaction_list: transaction_list NUMBER EOL . COLON LPAREN number_list RPAREN ARROW LPAREN number_list RPAREN

    COLON  décalage et aller à l'état 25


état 23

    6 number_list: NUMBER .

    $défaut  réduction par utilisation de la règle 6 (number_list)


état 24

    4 transaction_list: NUMBER COLON LPAREN number_list . RPAREN ARROW LPAREN number_list RPAREN
    7 number_list: number_list . COMMA NUMBER

    COMMA   décalage et aller à l'état 26
    RPAREN  décalage et aller à l'état 27


état 25

    5 transaction_list: transaction_list NUMBER EOL COLON . LPAREN number_list RPAREN ARROW LPAREN number_list RPAREN

    LPAREN  décalage et aller à l'état 28


état 26

    7 number_list: number_list COMMA . NUMBER

    NUMBER  décalage et aller à l'état 29


état 27

    4 transaction_list: NUMBER COLON LPAREN number_list RPAREN . ARROW LPAREN number_list RPAREN

    ARROW  décalage et aller à l'état 30


état 28

    5 transaction_list: transaction_list NUMBER EOL COLON LPAREN . number_list RPAREN ARROW LPAREN number_list RPAREN

    NUMBER  décalage et aller à l'état 23

    number_list  aller à l'état 31


état 29

    7 number_list: number_list COMMA NUMBER .

    $défaut  réduction par utilisation de la règle 7 (number_list)


état 30

    4 transaction_list: NUMBER COLON LPAREN number_list RPAREN ARROW . LPAREN number_list RPAREN

    LPAREN  décalage et aller à l'état 32


état 31

    5 transaction_list: transaction_list NUMBER EOL COLON LPAREN number_list . RPAREN ARROW LPAREN number_list RPAREN
    7 number_list: number_list . COMMA NUMBER

    COMMA   décalage et aller à l'état 26
    RPAREN  décalage et aller à l'état 33


état 32

    4 transaction_list: NUMBER COLON LPAREN number_list RPAREN ARROW LPAREN . number_list RPAREN

    NUMBER  décalage et aller à l'état 23

    number_list  aller à l'état 34


état 33

    5 transaction_list: transaction_list NUMBER EOL COLON LPAREN number_list RPAREN . ARROW LPAREN number_list RPAREN

    ARROW  décalage et aller à l'état 35


état 34

    4 transaction_list: NUMBER COLON LPAREN number_list RPAREN ARROW LPAREN number_list . RPAREN
    7 number_list: number_list . COMMA NUMBER

    COMMA   décalage et aller à l'état 26
    RPAREN  décalage et aller à l'état 36


état 35

    5 transaction_list: transaction_list NUMBER EOL COLON LPAREN number_list RPAREN ARROW . LPAREN number_list RPAREN

    LPAREN  décalage et aller à l'état 37


état 36

    4 transaction_list: NUMBER COLON LPAREN number_list RPAREN ARROW LPAREN number_list RPAREN .

    $défaut  réduction par utilisation de la règle 4 (transaction_list)


état 37

    5 transaction_list: transaction_list NUMBER EOL COLON LPAREN number_list RPAREN ARROW LPAREN . number_list RPAREN

    NUMBER  décalage et aller à l'état 23

    number_list  aller à l'état 38


état 38

    5 transaction_list: transaction_list NUMBER EOL COLON LPAREN number_list RPAREN ARROW LPAREN number_list . RPAREN
    7 number_list: number_list . COMMA NUMBER

    COMMA   décalage et aller à l'état 26
    RPAREN  décalage et aller à l'état 39


état 39

    5 transaction_list: transaction_list NUMBER EOL COLON LPAREN number_list RPAREN ARROW LPAREN number_list RPAREN .

    $défaut  réduction par utilisation de la règle 5 (transaction_list)
